add form-usage example files

--- a/17-WeekSeventeeth/Working-with-Tables/class_table.html
+++ b/17-WeekSeventeeth/Working-with-Tables/class_table.html
@@ -23,50 +23,51 @@
         }
     </style>
 </head>
-<body>
-    <h1>Class Table</h1>
-    <table>
-        <tr>
-            <th>Student ID</th>
-            <th>Name</th>
-            <th>Surname</th>
-            <th>Score</th>
-            <th>Birth Date</th>
-        </tr>
-        <tr>
-            <td>711</td>
-            <td>Semih</td>
-            <td>Turan</td>
-            <td>100</td>
-            <td>01/01/1990</td>
-        </tr>
-        <tr>
-            <td>55</td>
-            <td>Furkan</td>
-            <td>Aydemir</td>
-            <td>84</td>
-            <td>02/02/2001</td>
-        </tr>
-        <tr>
-            <td>34</td>
-            <td>Sinan Can</td>
-            <td>Ozer</td>
-            <td>95</td>
-            <td>03/03/1987</td>
-        </tr>
-        <tr>
-            <td>35</td>
-            <td>Ali Eren</td>
-            <td>Kose</td>
-            <td>88</td>
-            <td>03/03/2002</td>
-        </tr>
-        <tr>
-            <td>60</td>
-            <td>Batuhan</td>
-            <td>Yurudur</td>
-            <td>60</td>
-            <td>04/04/2004</td>
-        </tr>  
-</body>
+    <body>
+        <h1>Class Table</h1>
+        <table>
+            <tr>
+                <th>Student ID</th>
+                <th>Name</th>
+                <th>Surname</th>
+                <th>Score</th>
+                <th>Birth Date</th>
+            </tr>
+            <tr>
+                <td>711</td>
+                <td>Semih</td>
+                <td>Turan</td>
+                <td>100</td>
+                <td>01/01/1990</td>
+            </tr>
+            <tr>
+                <td>55</td>
+                <td>Furkan</td>
+                <td>Aydemir</td>
+                <td>84</td>
+                <td>02/02/2001</td>
+            </tr>
+            <tr>
+                <td>34</td>
+                <td>Sinan Can</td>
+                <td>Ozer</td>
+                <td>95</td>
+                <td>03/03/1987</td>
+            </tr>
+            <tr>
+                <td>35</td>
+                <td>Ali Eren</td>
+                <td>Kose</td>
+                <td>88</td>
+                <td>03/03/2002</td>
+            </tr>
+            <tr>
+                <td>60</td>
+                <td>Batuhan</td>
+                <td>Yurudur</td>
+                <td>60</td>
+                <td>04/04/2004</td>
+            </tr>
+        </table>
+    </body>
 </html>
